tests/NormalTests/paczka1/fuzzy1/62830877.err
Error in line 2: S569 A323 96,0
Error in line 3: rACGpB9V A323 45,3
Error in line 18: jY7CwZRSL3 A323 60,4
Error in line 33: vcqyTiGpbfk A917 39,8
